--- a/plantilla/site/index.html
+++ b/plantilla/site/index.html
@@ -72,13 +72,13 @@
 				</div>
 			</div>
 		</header>
-		<div class="slider_wrapper">
+		<!-- <div class="slider_wrapper">
 			<div id="camera_wrap" class="">
 				<div data-src="images/slide.jpg"></div>
 				<div data-src="images/slide1.jpg"></div>
 				<div data-src="images/slide2.jpg"></div>
 			</div>
-		</div>
+		</div> -->
 		<div class="container_12">
 			<div class="grid_12">
 				<div class="slogan">
