--- a/plantilla/site/reservas.html
+++ b/plantilla/site/reservas.html
@@ -113,12 +113,13 @@
 									<option value="dni">DNI</option>
 									<option value="cex">CEX</option>
 								</select>
+								<i></i>
 						</section>
 						<section class="col col-6">
 							<label class="input">
 								<i class="icon-prepend icon-ndoc"></i>
 								<i class="icon-append icon-asterisk"></i>
-								<input type="tel" placeholder="Número">
+								<input type="tel" placeholder="Número de documento">
 							</label>
 						</section>
 					</div>
@@ -410,6 +411,7 @@
 									<option value="paq8">Paq8</option>
 									<option value="paq9">Paq9</option>
 								</select>
+								<i></i>
 						</section>
 					</div>
 
