--- a/plantilla/site/reservas.html
+++ b/plantilla/site/reservas.html
@@ -83,10 +83,8 @@
 			</div>
 		</header>
 <!--==============================Content=================================-->
-		<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - February 24, 2014!</div>
-			<form action="" class="sky-form">
-				<header>Checkout form</header>
-				
+		<div class="content">
+			<form action="" class="sky-form">				
 				<fieldset>					
 					<div class="row">
 						<section class="col col-6">
