--- a/plantilla/site/reservas.html
+++ b/plantilla/site/reservas.html
@@ -84,7 +84,9 @@
 		</header>
 <!--==============================Content=================================-->
 		<div class="content">
-			<form action="" class="sky-form">				
+			<form action="" class="sky-form">
+				<!-- <header>Checkout form</header> -->
+				
 				<fieldset>					
 					<div class="row">
 						<section class="col col-6">
