--- a/plantilla/site/index.html
+++ b/plantilla/site/index.html
@@ -19,7 +19,7 @@
 		<script src="js/jquery.mobile.customized.min.js"></script>
 		<!--<![endif]-->
 		<script>
-		$(document).ready(function(){
+		/*$(document).ready(function(){
 			jQuery('#camera_wrap').camera({
 			loader: false,
 			pagination: true ,
@@ -31,7 +31,7 @@
 			fx: 'mosaic'
 			});
 			$().UItoTop({ easingType: 'easeOutQuart' });
-		})
+		})*/
 		</script>
 		<!--[if lt IE 8]>
 		<div style=' clear: both; text-align:center; position: relative;'>
