--- a/plantilla/site/reservas.html
+++ b/plantilla/site/reservas.html
@@ -11,11 +11,7 @@
 		<script src="js/jquery.equalheights.js"></script>
 		<script src="js/jquery.ui.totop.js"></script>
 		<script src="js/jquery.easing.1.3.js"></script>
-		<script>
-		$(document).ready(function(){
-			$().UItoTop({ easingType: 'easeOutQuart' });
-		})
-		</script>
+
 		<!--[if lt IE 8]>
 		<div style=' clear: both; text-align:center; position: relative;'>
 			<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
@@ -52,13 +48,10 @@
 
 		<!-- datepicker -->
 		<script src="js/jquery-ui.js"></script>
-		<script>
-			$(function() {
-				$( "#datepicker" ).datepicker();
-			});
-	  	</script>
+
 	</head>
 	<body class="pt0">
+
 <!--==============================header=================================-->
 		<header>
 			<div class="container_12">
@@ -114,6 +107,7 @@
 									<option value="cex">CEX</option>
 								</select>
 								<i></i>
+							</label>
 						</section>
 						<section class="col col-6">
 							<label class="input">
@@ -400,7 +394,7 @@
 					<div class="row">
 						<section class="col col-6">
 							<label class="select paqtur">
-								<select size="5">
+								<select id="select_paqtur" size="5">
 									<option value="0" disabled="">Paquete Turístico</option>
 									<option value="paq1">Paq1</option>
 									<option value="paq2">Paq2</option>
@@ -412,6 +406,12 @@
 									<option value="paq8">Paq8</option>
 									<option value="paq9">Paq9</option>
 								</select>
+							</label>
+						</section>
+						<section class="col col-6">
+							<label class="select paqtur">
+								<div id="desc_paqtur"></div>
+							</label>
 						</section>
 					</div>
 
@@ -458,6 +458,22 @@
 					$('.bt-menu').removeClass('bt-menu-open');
 				}
 			);
+
+			$().UItoTop({ easingType: 'easeOutQuart' });
+
+			$(function() {
+				$( "#datepicker" ).datepicker();
+			});
+
+			$("#select_paqtur").click(function(){
+				var desc_paqtur;
+				desc_paqtur = '<div><ul><li><strong>Código: </strong>' + $(this).val() + '</li>';
+				desc_paqtur += '<li><strong>Descripción: </strong>' + $(this).val() + ' bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla </li>';
+				desc_paqtur += '<li><strong>Horario: </strong>08:00hrs - 21:00hrs</li>';
+				desc_paqtur += '<li><strong>Precio:</strong> S/. 1,500</li></ul></div>';
+			    $("#desc_paqtur").html(desc_paqtur);
+			});
+
 		});
 		</script>
 	</body>
